--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ identify==2.6.1
 mypy==1.12.0
 mypy-extensions==1.0.0
 nodeenv==1.9.1
+numpy==2.1.2
 packaging==24.1
 pathspec==0.12.1
 platformdirs==4.3.6
